fixed controller tests